dev-deploy-k8s-microservice2-v1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: microservice2-v1
  labels:
    app: microservice2
    version: v1
spec:
  replicas: 3
  selector:
    matchLabels:
      app: microservice2
      version: v1
  template:
    metadata:
      labels:
        app: microservice2
        version: v1
    spec:
      containers:
      - name: microservice2
        image: giodimagio/microservice2:v1
        imagePullPolicy: IfNotPresent
        resources:
          requests:
            memory: 64Mi
            cpu: 250m
          limits:
            memory: 128Mi
            cpu: 500m
        ports:
        - containerPort: 5002
---
apiVersion: v1
kind: Service
metadata:
  name: microservice2
  labels:
    app: microservice2
spec:
  selector:
    app: microservice2
  type: ClusterIP
  ports:
    - port: 5002
      protocol: TCP
      name: http
      targetPort: 5002
