development-deploy-k8s-microservice1-v1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: microservice1
  labels:
    app: microservice1
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: microservice1
      version: v1
  template:
    metadata:
      labels:
        app: microservice1
        version: v1
    spec:
      containers:
      - name: microservice1
        image: giodimagio/microservice1:v1.0
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: microservice1
  labels:
    app: microservice1
spec:
  type: ClusterIP
  ports:
    - port: 5000
      protocol: TCP
      name: http
      targetPort: 5000
  selector:
    app: microservice1
